--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1331,6 +1331,29 @@ Prefix map =projectile= is sorted before prefix map =documentation=.
     :defer t)
 #+END_SRC
 
+** mu4e - E-mail client
+[[https://github.com/djcb/mu][mu4e (GitHub)]]
+
+#+BEGIN_SRC emacs-lisp
+  (use-package mu4e
+    :bind
+    ("C-c x m" . mu4e))
+
+  (use-package mu4e-vars
+    :defer t
+    :config
+    (defvar mu4e-change-filenames-when-moving)
+    (defvar mu4e-context-policy)
+    (defvar mu4e-get-mail-command)
+    (defvar mu4e-update-interval)
+
+    (setq mu4e-get-mail-command "mbsync -a")
+    (setq mu4e-update-interval (* 60 30)) ; In seconds
+    ;; When moving e-mail, isync requires them to be renamed
+    (setq mu4e-change-filenames-when-moving t)
+    (setq mu4e-context-policy 'pick-first))
+#+END_SRC
+
 ** elfeed - News reader
 [[https://github.com/skeeto/elfeed][elfeed (GitHub)]]
 
@@ -1663,10 +1686,10 @@ Run =M-x= ~koek-sly/fix-install~ and restart Emacs.
       :bind
       (:map emacs-lisp-mode-map
        ("C-c x p" . pp-eval-last-sexp)
-       ("C-c x m" . pp-macroexpand-last-sexp)
+       ("C-c x a" . pp-macroexpand-last-sexp)
        :map lisp-interaction-mode-map
        ("C-c x p" . pp-eval-last-sexp)
-       ("C-c x m" . pp-macroexpand-last-sexp)))
+       ("C-c x a" . pp-macroexpand-last-sexp)))
 
     (use-package helpful
       :bind
