--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -42,15 +42,15 @@ Define well known file and directory names.
       "~/")
     "File name to home directory.")
 
-  (defconst koek/org-dir (expand-file-name "Documenten/" koek/home-dir)
-    "File name to org directory.")
+  (defconst koek/documents-dir (expand-file-name "Documenten/" koek/home-dir)
+    "File name to documents directory.")
 
   (defconst koek/projects-dir (expand-file-name "Projecten/" koek/home-dir)
     "File name to projects directory.")
 
   (defconst koek/static-agenda-files
     (mapcar (lambda (file-name)
-              (expand-file-name file-name koek/org-dir))
+              (expand-file-name file-name koek/documents-dir))
             '("Inbox.org" "Afspraken.org"))
     "List of file names to static agenda files.")
 #+END_SRC
@@ -92,7 +92,7 @@ file.
         org-agenda-files (:before (&rest _args) koek/update-agenda-files)
       (setq org-agenda-files (koek/fetch-agenda-files)))
     :config
-    (setq org-directory koek/org-dir)
+    (setq org-directory koek/documents-dir)
     (setq org-refile-targets
           '((nil . (:maxlevel . 3))       ; Current
             (koek/fetch-agenda-files . (:maxlevel . 3)))))
@@ -107,6 +107,47 @@ file.
             ("a" "Appointment" entry (file "Afspraken.org")
              "* %?"
              :empty-lines 1))))
+#+END_SRC
+
+* E-mail accounts
+#+BEGIN_SRC emacs-lisp
+  (use-package mu4e-vars
+    :defer t
+    :config
+    (defvar mu4e-drafts-folder)
+    (defvar mu4e-maildir)
+    (defvar mu4e-refile-folder)
+    (defvar mu4e-sent-folder)
+    (defvar mu4e-trash-folder)
+
+    ;; maildir, refile-folder, drafts-folder, sent-folder and
+    ;; trash-folder are directory file names (i.e. no end /)
+    (setq mu4e-maildir (expand-file-name "E-mail" koek/documents-dir))
+    (setq mu4e-refile-folder "/Personal/Archive")
+    (setq mu4e-drafts-folder "/Personal/Drafts")
+    (setq mu4e-sent-folder "/Personal/Sent")
+    (setq mu4e-trash-folder "/Personal/Trash")
+
+    (use-package mu4e-context
+      :config
+      (defvar mu4e-contexts)
+      (declare-function make-mu4e-context "mu4e-context")
+      (declare-function mu4e-message-field "mu4e-message")
+
+      (setq mu4e-contexts
+            (list
+             (make-mu4e-context
+              :name "Personal"
+              :match-func
+              (lambda (message)
+                (when message
+                  (string-match-p (rx line-start "/Personal/")
+                                  (mu4e-message-field message :maildir))))
+              :vars
+              `((mu4e-refile-folder . ,mu4e-refile-folder)
+                (mu4e-drafts-folder . ,mu4e-drafts-folder)
+                (mu4e-sent-folder   . ,mu4e-sent-folder)
+                (mu4e-trash-folder  . ,mu4e-trash-folder)))))))
 #+END_SRC
 
 * News feeds
