[gnome] Add eID Viewer to Utilities folder.

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -246,6 +246,7 @@ To apply configuration, run:
 :END:
 
 #+BEGIN_SRC fundamental
+  eid-viewer.desktop
   electrum.desktop
   eog.desktop
   keepassx2.desktop
