--- a/.emacs.d/90-personal.org
+++ b/.emacs.d/90-personal.org
@@ -42,10 +42,13 @@ Define well known file and directory names.
       "~/")
     "File name to home directory.")
 
-  (defconst koek/documents-dir (expand-file-name "Documenten/" koek/home-dir)
+  (defconst koek/documents-dir
+    ;; mu4e chokes on symbolic links
+    (file-truename (expand-file-name "Documenten/" koek/home-dir))
     "File name to documents directory.")
 
-  (defconst koek/projects-dir (expand-file-name "Projecten/" koek/home-dir)
+  (defconst koek/projects-dir
+    (file-truename (expand-file-name "Projecten/" koek/home-dir))
     "File name to projects directory.")
 
   (defconst koek/static-agenda-files
