--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -194,7 +194,8 @@ Save auto-save files in =~/.emacs.d/var/auto-save/=.
   (use-package swiper
     :ensure t
     :bind
-    (:map swiper-map
+    (([remap isearch-forward] . swiper-isearch)
+     :map swiper-map
      ("C-c j" . swiper-avy)))
 #+END_SRC
 
@@ -1146,7 +1147,6 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     :bind
     (([remap find-file] . counsel-find-file)
      ([remap insert-char] . counsel-unicode-char)
-     ([remap isearch-forward] . counsel-grep-or-swiper)
      ([remap yank-pop] . counsel-yank-pop)
      ([remap execute-extended-command] . counsel-M-x)
      ([remap info-lookup-symbol] . counsel-info-lookup-symbol)
