[gnome] Add IPython to Work folder.

--- a/dotfiles.org
+++ b/dotfiles.org
@@ -270,6 +270,7 @@ To apply configuration, run:
   anki.desktop
   arduino.desktop
   emacs.desktop
+  ipython.desktop
   org.gnome.Boxes.desktop
   org.gnome.Calculator.desktop
   org.gnome.Maps.desktop
