--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -1125,7 +1125,7 @@ Enable minibuffer commands (e.g. [[*counsel - Ivy powered commands][counsel]]) i
     (declare-function ivy-mode "ivy")
 
     (setq ivy-re-builders-alist
-          '((swiper . ivy--regex-plus)
+          '((swiper-isearch . ivy--regex-plus)
             (counsel-ag . ivy--regex-plus)
             (counsel-unicode-char . ivy--regex-ignore-order)
             (t . ivy--regex-fuzzy)))
